--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -186,9 +186,10 @@
         .container(id="data" data-chatroom-id="#{@room.id}" data-user-id="#{current_user.id}")
           // メッセージ一覧（部分テンプレート化済み）
           // Websocketを介してサーバーからデータを受信した時に #messages に挿入されます
-          #messages(style="overflow-y: scroll; overflow-x: hidden; max-height: calc(100vh - 378px);")
+          #messages.scroll-list.jscroll(style="overflow-y: scroll; overflow-x: hidden; max-height: calc(100vh - 378px);")
             - @messages.each do |message|
               = render "public/messages/message", message: message
+            = paginate @messages
 
           // 投稿フォーム
           .row
@@ -238,3 +239,12 @@
 
     };
   };
+
+:javascript
+  $(document).on('turbolinks:load', function() {
+    $('.jscroll').jscroll({ // 追加したdivのclass名と合わせる
+      contentSelector: '.jscroll',
+      nextSelector: '.next a',  // 次ページリンクのセレクタ
+      loadingHtml: '読み込み中',
+    });
+  });
