--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -246,5 +246,7 @@
       contentSelector: '.jscroll',
       nextSelector: '.next a',  // 次ページリンクのセレクタ
       loadingHtml: '読み込み中',
+      padding: 10,
+      bind: 'append'
     });
   });
