--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -1,57 +1,12 @@
 .container-fluid
-  .row.text-center(style="height: 15vh;")
-    // マイページ上部
-    .col.col-2.border.bg-secondary
-      LOGO
-    .col.border.bg-secondary
-      ルーム名
-    .col.col-2.border.bg-secondary
-      .btn-group
-        #button(type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false")
-          <i class="fas fa-user"></i>
-          = "#{current_user.name}"
-        .dropdown-menu.dropdown-menu-right.p-2
-          .dropdown-item.my-1{"data-target" => "#modalUserEdit", "data-toggle" => "modal", type: "button" }
-            ユーザーの編集
-          = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item"
-
-      #modalUserEdit.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modalUserEditTitle", role: "dialog", tabindex: "-1"}
-        .modal-dialog{role: "document"}
-          .modal-content
-            .modal-header
-              %h5#modalUserEditTitle.modal-title ユーザー情報編集<i class="fas fa-plus"></i>
-              %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
-                %span{"aria-hisdden" => "true"} ×
-            .modal-body.text-left(style="word-wrap: break-word;")
-              // モーダルの中身
-              = form_with model: current_user, url: users_path, method: :patch do |f|
-                .field.mt-3
-                  = f.label :name, "名前", class: "pl-2"
-                  = f.text_field :name, class: "form-control", id: "validationTextarea", placeholder: "お名前", required: true
-                  .invalid-feedback お名前を入力してください。
-                .field.mt-3
-                  = f.label :nickname, "ニックネーム", class: "pl-2"
-                  = f.text_field :nickname, class: "form-control", id: "validationTextarea", placeholder: "ニックネーム", required: true
-                  .invalid-feedback ニックネームを入力してください。
-                .field.mt-3
-                  = f.label :phone_number, "電話番号", class: "pl-2"
-                  = f.number_field :phone_number, class: "form-control", id: "validationTextarea", placeholder: "電話番号", required: true
-                  .invalid-feedback 電話番号を入力してください。
-                .field.mt-3
-                  = f.label :email, "メールアドレス", class: "pl-2"
-                  = f.email_field :email, autofocus: true, class: "form-control", id: "validationTextarea", placeholder: "メールアドレス", required: true
-                  .invalid-feedback メールアドレスを入力してください。
-                .field.mt-3
-                  = f.label :search_id, "検索用ID", class: "pl-2"
-                  = f.text_field :search_id, class: "form-control", placeholder: "検索用ID"
-                .mt-3
-                  = f.submit "更新", class: "btn btn-success"
-
-  // ページ下部
-  .row(style="height: 85vh;")
+  .row.vh-100
 
     // 左のサイドバー
     .col.col-2.p-0
+
+      .row.bg-info.align-items-center.justify-content-center.m-0.mb-2(style="height: 100px;")
+        .col.p-0
+          %h1.text-center LOGO
 
       // タブ
       %ul.nav.nav-tabs(id="myTab" role="tablist")
@@ -132,7 +87,52 @@
               = link_to "フォローする", users_relationships_path(params: {user_id: user.id}), method: :post
 
     // メイン画面
-    .col
+    .col.border-left
+      // 画面右上にプルダウンメニューを表示
+      .fixed-top
+        .btn-group.float-right.mt-2.mr-2
+          #button(type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false")
+            <i class="fas fa-user"></i>
+            = "#{current_user.name}"
+          .dropdown-menu.dropdown-menu-right.p-2
+            .dropdown-item.my-1{"data-target" => "#modalUserEdit", "data-toggle" => "modal", type: "button" }
+              ユーザーの編集
+            = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item"
+
+
+      #modalUserEdit.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "modalUserEditTitle", role: "dialog", tabindex: "-1"}
+        .modal-dialog{role: "document"}
+          .modal-content
+            .modal-header
+              %h5#modalUserEditTitle.modal-title ユーザー情報編集<i class="fas fa-plus"></i>
+              %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
+                %span{"aria-hisdden" => "true"} ×
+            .modal-body.text-left(style="word-wrap: break-word;")
+              // モーダルの中身
+              = form_with model: current_user, url: users_path, method: :patch do |f|
+                .field.mt-3
+                  = f.label :name, "名前", class: "pl-2"
+                  = f.text_field :name, class: "form-control", id: "validationTextarea", placeholder: "お名前", required: true
+                  .invalid-feedback お名前を入力してください。
+                .field.mt-3
+                  = f.label :nickname, "ニックネーム", class: "pl-2"
+                  = f.text_field :nickname, class: "form-control", id: "validationTextarea", placeholder: "ニックネーム", required: true
+                  .invalid-feedback ニックネームを入力してください。
+                .field.mt-3
+                  = f.label :phone_number, "電話番号", class: "pl-2"
+                  = f.number_field :phone_number, class: "form-control", id: "validationTextarea", placeholder: "電話番号", required: true
+                  .invalid-feedback 電話番号を入力してください。
+                .field.mt-3
+                  = f.label :email, "メールアドレス", class: "pl-2"
+                  = f.email_field :email, autofocus: true, class: "form-control", id: "validationTextarea", placeholder: "メールアドレス", required: true
+                  .invalid-feedback メールアドレスを入力してください。
+                .field.mt-3
+                  = f.label :search_id, "検索用ID", class: "pl-2"
+                  = f.text_field :search_id, class: "form-control", placeholder: "検索用ID"
+                .mt-3
+                  = f.submit "更新", class: "btn btn-success"
+
+
       // ルーム選択時
       - if @room.present?
         %h1
@@ -141,7 +141,7 @@
           .d-flex
             // モーダル
             .btn.btn-sm.btn-success.my-1{"data-target" => "#modalRoomEntry", "data-toggle" => "modal", type: "button" }
-              ルームへ招待<i class="fas fa-plus"></i>
+              ルームへ招待<i class="fas fa-user-plus"></i>
 
             //= link_to user.name, entries_path(params: { entry: { user_id: user.id, room_id: @room.id } }), method: :post, class: "list-group-item list-group-item-action"
 
@@ -189,7 +189,7 @@
         .container(id="data" data-chatroom-id="#{@room.id}" data-user-id="#{current_user.id}")
           // メッセージ一覧（部分テンプレート化済み）
           // Websocketを介してサーバーからデータを受信した時に #messages に挿入されます
-          #messages.scroll-list.jscroll(style="overflow-y: scroll; overflow-x: hidden; max-height: calc(100vh - 317px);")
+          #messages.scroll-list.jscroll(style="overflow-y: scroll; overflow-x: hidden; max-height: calc(100vh - 185px);")
             - @messages.each do |message|
               = render "public/messages/message", message: message
             = paginate @messages
