--- a/app/views/public/messages/_message.html.haml
+++ b/app/views/public/messages/_message.html.haml
@@ -4,14 +4,14 @@
     .col
     .col.text-right
       %small
-        = user.name
+        = user.nickname
         = message.created_at.strftime('%Y/%m/%d %H:%M')
       .bg-info.rounded.m-1.p-1
         = simple_format(message.message)
   - else
     .col
       %small
-        = user.name
+        = user.nickname
         = message.created_at.strftime('%Y/%m/%d %H:%M')
       .bg-secondary.rounded.m-1.p-1
         = simple_format(message.message)
