--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -43,18 +43,30 @@
           - @rooms.each do |room|
             -# %p{"data-tablinks" => "off"}
             - if room == @room
+              // 選択しているルーム
               = link_to root_path, data: { 'turbolinks': false }, class: "list-group-item d-flex justify-content-between align-items-center active" do
                 = room.name
-                %span.badge.badge-secondary.badge-pill= room.messages.count
+                - if room.entried?(current_user)
+                  %span.badge.badge-secondary.badge-pill= room.messages.count
+                - else
+                  %span.badge.badge-danger.badge-pill 未参加
             - else
+              // 未選択のルーム
               - if room.entried?(current_user)
-                = link_to root_path(room_id: room.id), data: { 'turbolinks': false }, class: "list-group-item d-flex justify-content-between align-items-center list-group-item-action" do
-                  = room.name
-                  %span.badge.badge-primary.badge-pill= room.messages.count
+                // 参加しているルーム
+                - if room.owner_id == current_user.id
+                  = link_to root_path(room_id: room.id), data: { 'turbolinks': false }, class: "list-group-item list-group-item-info d-flex justify-content-between align-items-center list-group-item-action" do
+                    = room.name
+                    %span.badge.badge-primary.badge-pill= room.messages.count
+                - else
+                  = link_to root_path(room_id: room.id), data: { 'turbolinks': false }, class: "list-group-item d-flex justify-content-between align-items-center list-group-item-action" do
+                    = room.name
+                    %span.badge.badge-primary.badge-pill= room.messages.count
               - else
+                // 未参加のルーム
                 = link_to root_path(room_id: room.id), data: { 'turbolinks': false }, class: "list-group-item list-group-item-warning d-flex justify-content-between align-items-center list-group-item-action" do
                   = room.name
-                  %span.badge.badge-primary.badge-pill= room.messages.count
+                  %span.badge.badge-danger.badge-pill 未参加
 
         // フレンド一覧
         .tab-pane.fade.list-group(id="friends" role="tabpanel" aria-labelledby="friends-tab")
