--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -187,9 +187,10 @@
           // メッセージ一覧（部分テンプレート化済み）
           // Websocketを介してサーバーからデータを受信した時に #messages に挿入されます
           #messages.scroll-list.jscroll(style="overflow-y: scroll; overflow-x: hidden; max-height: calc(100vh - 378px);")
-            - @messages.each do |message|
-              = render "public/messages/message", message: message
-            = paginate @messages
+            .aa
+              - @messages.each do |message|
+                = render "public/messages/message", message: message
+              = paginate @messages
 
           // 投稿フォーム
           .row
@@ -243,10 +244,11 @@
 :javascript
   $(document).on('turbolinks:load', function() {
     $('.jscroll').jscroll({ // 追加したdivのclass名と合わせる
-      contentSelector: '.jscroll',
-      nextSelector: '.next a',  // 次ページリンクのセレクタ
-      loadingHtml: '読み込み中',
-      padding: 10,
-      bind: 'append'
+      contentSelector: '.aa',
+      nextSelector: 'nav.pagination a[rel="next"]',
+      loadingHtml: '<div class="text-center"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></div>',
+      padding: 20,
+      autoTrigger: true,
+      debug: true
     });
   });
