--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -4,9 +4,7 @@
     // 左のサイドバー
     .col.col-2.p-0
 
-      .row.bg-info.align-items-center.justify-content-center.m-0.mb-2(style="height: 100px;")
-        .col.p-0
-          %h1.text-center LOGO
+      = image_tag('logo.gif', width: "100%")
 
       // タブ
       %ul.nav.nav-tabs(id="myTab" role="tablist")
