[fix] ロゴのサイズ

--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -3,8 +3,8 @@
 
     // 左のサイドバー
     .col.col-2.p-0
-
-      = image_tag('logo.gif', width: "100%")
+      .image(style="width: 100px; margin: auto;")
+        = image_tag('logo.gif', width: "100%")
 
       // タブ
       %ul.nav.nav-tabs(id="myTab" role="tablist")
