--- a/app/views/public/users/show.html.haml
+++ b/app/views/public/users/show.html.haml
@@ -71,6 +71,8 @@
 
           // フレンド検索フォーム
           = form_with url: root_path, method: :get do |f|
+            - if @room.present?
+              = f.hidden_field :room_id, :value => @room.id
             %label
               = f.radio_button :range, 'Nickname', checked: "checked"
               = "ニックネーム"
@@ -93,8 +95,12 @@
               = link_to users_relationships_path(params: {user_id: user.id}), method: :delete, data: {confirm: "フォローを外しますか？"}, class: "list-group-item list-group-item-info d-flex justify-content-between align-items-center list-group-item-action" do
                 = user.nickname
             - else
-              = link_to users_relationships_path(params: {user_id: user.id}), method: :post, data: {confirm: "フォローしますか？"}, class: "list-group-item list-group-item-info d-flex justify-content-between align-items-center list-group-item-action" do
-                = user.nickname
+              - if @room.present?
+                = link_to users_relationships_path(params: {user_id: user.id, room_id: @room.id}), method: :post, data: {confirm: "フォローしますか？"}, class: "list-group-item list-group-item-info d-flex justify-content-between align-items-center list-group-item-action" do
+                  = user.nickname
+              - else
+                = link_to users_relationships_path(params: {user_id: user.id}), method: :post, data: {confirm: "フォローしますか？"}, class: "list-group-item list-group-item-info d-flex justify-content-between align-items-center list-group-item-action" do
+                  = user.nickname
 
           // 自分をフォローしている　＆　自分がフォローしていない人を出す
           - unless @word.present?
