ルーム未選択時のエラー修正、検索結果のカーソル合わせの際の変更、移動後の表示

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -22,3 +22,15 @@ nav.pagination {
   color: red;
   background-color: antiquewhite;
 }
+
+.search_result_messages {
+  cursor: pointer;
+}
+
+.search_result_messages:hover {
+  background-color: beige;
+}
+
+.active .rounded {
+  background-color: gold !important;
+}
